@@ -1,5 +1,7 @@
 DIST gentoo-ru-0.14.gz 44153 RMD160 312deda8501f1c65c4a48c3d8db097e31b70710b SHA1 0b1405bd392771e0742fb1968aa0e6898eee5709 SHA256 a31caac28d4080114cdee302d71d026e80f542db623b44132f39b4bdb96efbfb
+DIST gentoo-ru-0.15.gz 46981 RMD160 3996dc690958105041269bdee097dd45b355cf76 SHA1 3169e0bf569dcc11bb8beba46195860c904b5c74 SHA256 f860db93acb7af6a79fd107f7952d7392147b501608b5174e71e9809df2c8794
 EBUILD fortune-mod-gentoo-ru-0.14.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
+EBUILD fortune-mod-gentoo-ru-0.15.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-9999.ebuild 637 RMD160 45bc00345eb1454a4092370d5b5818d13c4288eb SHA1 cbb8f3f113f14ee05186ea8c1f01c5b336e0817a SHA256 d29f3a08b1967811abacdf7b390da8863eee2f3d19570b5b21068d753554b099
-MISC ChangeLog 2797 RMD160 0544b4495b091aa85d5a327b00617608b5b78251 SHA1 884dd572e33983d784d1dbe4090eeff5fdf233d0 SHA256 44b3883e6df8ff143c6da511fef2019857c1722e40a1bc3e0f72fd8e427f40fe
+MISC ChangeLog 2941 RMD160 7e564d4d29a40abc5575f3a6bf0294aaf2e0e6ef SHA1 5e942a7cf21d5764bf4c860982f69420f0584d0d SHA256 9aaaee31de68603fb6d63e581f5d6dbec83640c080058dc511e6692aa454a6a0
 MISC metadata.xml 478 RMD160 23c855181d5b354257112cc8949ec7d82f17f96b SHA1 7ef293d63d616ab9990a1bec36c57556791a3292 SHA256 684e2a5b887e7c708245d69e673022d7fff5bc786f6b14116d386fc42a257272
