@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fortune-mod-gentoo-ru-0.15 ( 12 Oct 2010 )
+
+  12 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +fortune-mod-gentoo-ru-0.15.ebuild:
+  bump
+
   18 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   -fortune-mod-gentoo-ru-0.12.ebuild, -fortune-mod-gentoo-ru-0.13.ebuild:
   remove old
